# vortex-pqc

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml  sync-docs.yml
c/: Makefile
c/examples/: demo.c
c/include/: vortex_pqc.h
c/src/: python_module.c  vortex_core.c  vortex_poly.c  vortex_poly.h
c/tests/: test_bench.c  test_vortex.c
docs/: README.md  api-reference.md  architecture.md  comparison.md  concepts.md  cryptography.md  development.md  faq.md  getting-started.md  glossary.md  guides-c-library.md  guides-key-exchange.md  guides-key-management.md  guides-python.md  overview.md  pem-format.md  performance.md  security.md  troubleshooting.md
scripts/: sync-docs.sh
src/tests/: test_core.py  test_pem.py
src/vortex_pqc/: __init__.py  _pure.py  benchmark.py  core.py  params.py  pem.py
